@@ -1178,6 +1178,7 @@ Mod(1, 5)*x^2 + Mod(3, 5)*x + Mod(2, 5)
 1
 1
 t^2 + t + 1
+0
 1
 0
 1
@@ -1231,4 +1232,4 @@ x + 2
 29
 101
 1
-Total time spent: 4099
+Total time spent: 3807
