@@ -103,6 +103,7 @@ issquare(4/3)
 issquare(I)
 issquare(ffgen(2^3,'t))
 if(issquare(ffgen(2^3,'t),&z),z)
+issquare(ffgen(3^2),&z)
 issquare(O(x))
 issquare(x+O(x^2))
 issquare(4*x^2+O(x^3))
