@@ -26,6 +26,7 @@ BA   1- plotlines flag was ignored
     17- u_forprime_next around 2^63 could return primes larger than upper bound
     18- gcd(2*x, 2*x+1) -> 2 [instead of 1]
     19- deriv(2/(4*x^2+1),x) -> inconsistent exact division [#2162]
+    20- issquare(non square t_FFELT, &x) -> SEGV [#2163]
 
   Changed
      1- [libpari] rename rootsof1 -> nfrootsof1
